Trying to clean up code

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+MANIFEST.MF
 # Created by https://www.gitignore.io/api/windows,intellij
 # Edit at https://www.gitignore.io/?templates=windows,intellij
 
