--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,6 +7,7 @@ website: ks1.xyz
 api-version: "1.13"
 softdepend:
   - ProtocolLib
+  - Vault
 
 commands:
   admingui:
@@ -15,3 +16,16 @@ commands:
     aliases:
       - a
       - admintools
+
+
+permissions:
+  admintools3.use:
+    description: Needed to use the plugin
+  admintools3.bypass.cooldown:
+    description: Bypass Module cooldowns. admintools3.bypass.cooldown.<modulename> to bypass individual cooldowns.
+  admintools3.bypass.freeze:
+    description: You cannot be freezed anymore.
+  admintools3.bypass.mute:
+    description: You cannot be muted anymore.
+  admintools3.bypass.vanish:
+    description: You can see players that are in vanish mode.
