--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,22 @@ repositories {
         name = 'protocol-lib'
         url "https://repo.dmulloy2.net/nexus/repository/public/"
     }
+    maven {
+        name = 'vault-repo'
+        url 'https://jitpack.io'
+    }
+    maven {
+        name = 'PAPI-repo'
+        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
+    }
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compileOnly 'org.bukkit:bukkit:1.13.2-R0.1-SNAPSHOT'
-    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.5.0";
+    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.5.0"
+    compileOnly "com.github.MilkBowl:VaultAPI:1.7"
+    compileOnly 'me.clip:placeholderapi:2.10.5'
 }
 
 import org.apache.tools.ant.filters.ReplaceTokens
