Added persistent data storage and new modules. - Persistent Data Storage in YAML files - New Modules: ChatClear, CommandSpy - Changed modules to module in config.yml to match with the message key format - Fixed bugs in the translations - Added NameMC profile links to /pinfo
Signed-off-by: BuildTools <Arved>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -25,10 +25,15 @@ language: en
 prefix: "&cAdminTools&8│ &7"
 log-module-usage: true
 
-modules:
+module:
   heal:
     fillFoodBar: true
     cooldown: 0
+  chatclear:
+    messageAmount: 100
+    aliases:
+      - clearchat
+      - cc
   enderchest:
     aliases:
       - ec
