--- a/build.gradle
+++ b/build.gradle
@@ -1,43 +1,34 @@
-apply plugin: 'java'
+plugins {
+    id 'com.github.johnrengelman.shadow' version '5.1.0'
+    id 'java'
+}
 
-group = pluginGroup
-version = pluginVersion
+group = pluginGroup // die Groupe, zb. de.meinname (das erste Teil vom Package was deine Website repräsentiert)
+version = pluginVersion // deine Version zb. 1.0
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
 repositories {
     mavenCentral()
-    maven {
-        name = 'papermc-repo'
-        url = 'https://papermc.io/repo/repository/maven-public/'
-    }
-    maven {
-        name = 'protocol-lib'
-        url "https://repo.dmulloy2.net/nexus/repository/public/"
-    }
-    maven {
-        name = 'vault-repo'
-        url 'https://jitpack.io'
-    }
-    maven {
-        name = 'PAPI-repo'
-        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
-    }
+    jcenter()
+    maven { url "https://papermc.io/repo/repository/maven-public/" }
+    maven { url "https://repo.dmulloy2.net/nexus/repository/public/" }
+    maven { url "https://jitpack.io" }
+    maven { url "https://repo.extendedclip.com/content/repositories/placeholderapi/" }
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
     compileOnly 'org.bukkit:bukkit:1.13.2-R0.1-SNAPSHOT'
-    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.5.0"
+    implementation('io.papermc:paperlib:1.0.2')
+    compileOnly 'com.comphenix.protocol:ProtocolLib:4.5.0'
     compileOnly "com.github.MilkBowl:VaultAPI:1.7"
     compileOnly 'me.clip:placeholderapi:2.10.5'
 }
 
-import org.apache.tools.ant.filters.ReplaceTokens
-
-processResources {
-    from(sourceSets.main.resources.srcDirs) {
-        filter ReplaceTokens, tokens: [version: version]
-    }
+shadowJar {
+    relocate 'io.papermc.lib', 'dev.wwst.admintools3.paperlib'
+    destinationDirectory = file("build/libs")
 }
+
+compileJava.options.encoding = "UTF-8"
