--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Admintools3
-version: @version@
+version: 3.0.0
 main: dev.wwst.admintools3.AdminTools3
 authors: [Weiiswurst]
 description: AdminTools v3
