--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -18,6 +18,11 @@ language: en
 prefix: "&cAdminTools&8│ &7"
 log-module-usage: true
 
+join-leave-messages:
+  replace-messages: false
+  join: "&e%s joined the game."
+  leave: "&e%s left the game."
+
 adminchat:
   format: "&c&lAC &7<&e%player%&7> &a%message%"
   prefix: "@admin"
@@ -40,6 +45,22 @@ module:
   invsee:
     aliases:
       - invspy
+  worldtp:
+    aliases:
+      - wtp
+  weather:
+    registerCommands: false
+    aliases:
+      - sun
+      - sunny
+      - rain
+  difficulty:
+    registerCommands: false
+  gamemode:
+    registerCommands: false
+    aliases:
+      - gm
+  kill:
+    registerCommands: false
 
-
-CONFIG_VERSION_NEVER_CHANGE_THIS: 2
+CONFIG_VERSION_NEVER_CHANGE_THIS: 3
