AdminTools version 3.1.1! - Updated some dependencies to the newest version - Cleaned up some code - Added the config option to not display any message to the target player (useful for Invsee and other modules to survey players)
Signed-off-by: BuildTools <Arved>

--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,10 @@ repositories {
 
 dependencies {
     compileOnly 'org.bukkit:bukkit:1.13.2-R0.1-SNAPSHOT'
-    implementation('io.papermc:paperlib:1.0.2')
-    compileOnly 'com.comphenix.protocol:ProtocolLib:4.5.0'
-    compileOnly "com.github.MilkBowl:VaultAPI:1.7"
-    compileOnly 'me.clip:placeholderapi:2.10.5'
+    implementation 'io.papermc:paperlib:1.0.3'
+    compileOnly 'com.comphenix.protocol:ProtocolLib:4.5.1'
+    compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
+    compileOnly 'me.clip:placeholderapi:2.10.6'
 }
 
 shadowJar {
