--- a/src/main/resources/messages_de.yml
+++ b/src/main/resources/messages_de.yml
@@ -17,7 +17,7 @@ chatmessages:
   tooManyPlayers: "&cDa nur &e54 &cSpieler in die GUI passen, aber &e%s &conline sind, musst du diese Spieler direkt im /a-Befehl auswählen!"
   tooManyWorlds: "&cDa nur &e54 &cWelten in die GUI passen, aber &e%s &cgeladen sind, musst du diese Welten direkt im /a-Befehl auswählen!"
   numberFormat: "&e%s &cist keine Nummer! (Denke daran, dass du Kommas als Punkt '.' schreiben musst!)"
-  smallerThanZero: "&e%s &cist kleiner als 0!"
+  smallerThanZero: "&e%s &cist kleiner oder gleich 0!"
   playerOnlyCommand: "Diesen Befehl kannst du nur Ingame benutzen!"
   legacyVersion: "!!! Deine Server-Version ist ALT! Bitte nutze die neueste Minecraft-Version. Obwohl wir an Kompatibilität arbeiten, kann sie nicht garantiert werden !!!"
   protocolLibNotFound: >
