--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
 name: Admintools3
-version: 3.1.1
+version: 3.1.2
 main: dev.wwst.admintools3.AdminTools3
 authors: [Weiiswurst]
 description: AdminTools v3
-website: ks1.xyz
+website: "https://weiiswurst.gitbook.io/admintools3/"
 api-version: "1.13"
 softdepend:
   - ProtocolLib
